force-app/main/default/objects/AgentConfig__c/AgentConfig__c.object-meta.xml
<CustomObject>
    <description>Mutable agent profile and runtime defaults.</description>
    <label>Agent Config</label>
    <nameField>
        <displayFormat>CFG-{0000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>