force-app/main/default/objects/AgentConfig__c/fields/EnabledTools__c.field-meta.xml
<CustomField>
    <fullName>EnabledTools__c</fullName>
    <label>Enabled Tools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>