force-app/main/default/objects/AgentConfig__c/fields/MaxTurns__c.field-meta.xml
<CustomField>
    <fullName>MaxTurns__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max Turns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>