force-app/main/default/objects/AgentConfig__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>anthropic</fullName>
                <default>true</default>
                <label>Anthropic</label>
            </value>
            <value>
                <fullName>openai</fullName>
                <label>OpenAI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>