force-app/main/default/objects/AgentConfig__c/fields/SystemPrompt__c.field-meta.xml
<CustomField>
    <fullName>SystemPrompt__c</fullName>
    <label>System Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>